--- a/corporate-ui/index.html
+++ b/corporate-ui/index.html
@@ -60,55 +60,154 @@
 
     <style>
      article p a {font-family: 'Scania Sans Bold'}
+     .new-version,
+     .old-version {
+       padding-top: 15px;
+       margin-left: 20px;
+     }
+     .quick-links {
+       border: 1px solid #041EA0;
+       margin: 15px;
+       padding: 5px 10px;
+       /* width: 300px; */
+       position: fixed;
+     }
+
+     .new-version-article {
+       display: none;
+     }
     </style>
 
 
     <section class="light">
-      <article>
-        <div class="container">
-          <h1>Corporate UI</h1>
-          <h2 style="margin-top: 0 !important">Scania's Web Components Collection</h2>
-          <p>The new Scania user interface is now largely supplied as ready to run web components. This means that you no longer has to develop common elements like the header, main navigation or the page footer. Filtered and sortable tables are available to use straight of the shelf as well as a lot of other components as well.</p>
+      <div class="container-fluid">
+        <div class="col-lg-8 col-lg-offset-2 col-md-9 col-sm-9">
+          <article>
+            <div class="old-version-article">
+              <div class="pull-right new-version">
+                <span class="badge badge-success">New</span>
+                <h5 class="pt-1"><a href="#corporate-ui-5">Corporate-ui 4.x</a></h5>
+              </div>
+              <div>
+                <h1>Corporate UI 3.x</h1>
+                <h2 style="margin-top: 0 !important">Scania's Web Components Collection</h2>
+              </div>
+              <p>The new Scania user interface is now largely supplied as ready to run web components. This means that you no longer has to develop common elements like the header, main navigation or the page footer. Filtered and sortable tables are available to use straight of the shelf as well as a lot of other components as well.</p>
 
-          <p>Web Components consists of several separate technologies. You can think of Web Components as reusable user interface widgets that are created using open Web technology. An existing Web Component can be used without writing much of the code, simply by adding an import statement to an HTML page. Since Web Components use new or still-developing standard browser capabilities, we are currently using Google Polymer to package the Scania components in a smart way and use their polyfills to make the components more browser independent.</p>
+              <p>Web Components consists of several separate technologies. You can think of Web Components as reusable user interface widgets that are created using open Web technology. An existing Web Component can be used without writing much of the code, simply by adding an import statement to an HTML page. Since Web Components use new or still-developing standard browser capabilities, we are currently using Google Polymer to package the Scania components in a smart way and use their polyfills to make the components more browser independent.</p>
 
-          <h2>Latest Version</h2>
-          <p>We're aiming at doing weekley releases and usually the UX Library is the first site to run the latest stable version. Currently, you'll get all the latest updates by including this file on your page:</p>
-          <p class="text-info">https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js</p>
+              <h2>Latest Version</h2>
+              <p>We're aiming at doing weekley releases and usually the UX Library is the first site to run the latest stable version. Currently, you'll get all the latest updates by including this file on your page:</p>
+              <p class="text-info">https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js</p>
 
-          <h2>Ground-breaking improvement in Scania's reuse approach</h2>
-          <p>With Custom Elements (a part of the Web Components standard) Scania developers and partner companies can use functionality "off the shelf", create new HTML tags or extend the components other developers have created.</p>
-          <p>Google Polymer is the foundation of our web components and it brings a web standards-based way to create reusable components using nothing more than JS/HTML/CSS as well as, possibly, using libraries or frameworks like Angular and React to improve them even more. The result is less code, modular code, and higher grade of reuse in our applications. Now, you can totally focus on the user experience that you actually are here to develop.</p>
+              <h2>Ground-breaking improvement in Scania's reuse approach</h2>
+              <p>With Custom Elements (a part of the Web Components standard) Scania developers and partner companies can use functionality "off the shelf", create new HTML tags or extend the components other developers have created.</p>
+              <p>Google Polymer is the foundation of our web components and it brings a web standards-based way to create reusable components using nothing more than JS/HTML/CSS as well as, possibly, using libraries or frameworks like Angular and React to improve them even more. The result is less code, modular code, and higher grade of reuse in our applications. Now, you can totally focus on the user experience that you actually are here to develop.</p>
 
-          <h2>A single code base</h2>
-          <p>Scania stores its custom elements and Web Components in one single master repository. This gives us a unique opportunity to make continues improvements to shared elements. If for example a date picker is improved in one place, that one will immediately be available for other applications using the Scania standard. The economic effect is that much of our IT investments within this area automatically is shared and used for improvements and core UX rather than re-inventing the wheel from scratch every single time.</p>
+              <h2>A single code base</h2>
+              <p>Scania stores its custom elements and Web Components in one single master repository. This gives us a unique opportunity to make continues improvements to shared elements. If for example a date picker is improved in one place, that one will immediately be available for other applications using the Scania standard. The economic effect is that much of our IT investments within this area automatically is shared and used for improvements and core UX rather than re-inventing the wheel from scratch every single time.</p>
 
-          <h2>Getting started</h2>
-          <p>In the UX Library you'll find a lot of ready to use elements and components ranging from a standalone Scania Corporate Header including our wordmark and logotype, to advanced Product Carousels and Tables with sorting, filtering and responsive utilities. </p>
-          <p>You'll find many components in the <a href="https://github.com/scania/corporate-ui">Corporate UI GitHub Repository</a>.</p>
-          <h3>Standard HTML Template</h3>
-          <p>If your solution is a traditional website it is very straight forward to start using Corporate UI. Download <a href="../corporate-ui/template/basic-template-app.html" target="_blank">this basic template for applications</a> or this <a href="../corporate-ui/template/basic-template.html" target="_blank">this basic template for public sites</a>. Then open it in your browser to explore our custom and standard HTML elements. Then reuse code samples from Scania Bootstrap to create the user interface.</p>
+              <h2>Getting started</h2>
+              <p>In the UX Library you'll find a lot of ready to use elements and components ranging from a standalone Scania Corporate Header including our wordmark and logotype, to advanced Product Carousels and Tables with sorting, filtering and responsive utilities. </p>
+              <p>You'll find many components in the <a href="https://github.com/scania/corporate-ui">Corporate UI GitHub Repository</a>.</p>
+              <h3>Standard HTML Template</h3>
+              <p>If your solution is a traditional website it is very straight forward to start using Corporate UI. Download <a href="../corporate-ui/template/basic-template-app.html" target="_blank">this basic template for applications</a> or this <a href="../corporate-ui/template/basic-template.html" target="_blank">this basic template for public sites</a>. Then open it in your browser to explore our custom and standard HTML elements. Then reuse code samples from Scania Bootstrap to create the user interface.</p>
 
-          <h3>Using Corporate UI with frameworks</h3>
-          <p>If you're creating an application using Angular, React or equivalent - you basically will use the same code as on the templates shown above. But there are <a href="/corporate-ui-docs/corporate-ui/frameworks/">a few things to that you must do differently</a>.</p>
+              <h3>Using Corporate UI with frameworks</h3>
+              <p>If you're creating an application using Angular, React or equivalent - you basically will use the same code as on the templates shown above. But there are <a href="/corporate-ui-docs/corporate-ui/frameworks/">a few things to that you must do differently</a>.</p>
 
-          <h3>Strong skills in Bootstrap</h3>
-          <p>Since we won't be able to standardize each and every component made at Scania, you'll need to develop your core UX within your project. As we’re using the Bootstrap Grid within our components, you'll highly benefit from using it in your custom development as well. Here's a few good starting points:</p>
-          <ul>
-            <li><a href="/corporate-ui-docs/corporate-ui/components/">Bootstrap Documentation</a></li>
-            <li><a href="https://www.youtube.com/playlist?list=PL7029EEFC21D2DC58" target="_blank">An introduction to Standard Bootstrap (YouTube videos)</a></li>
-          </ul>
+              <h3>Strong skills in Bootstrap</h3>
+              <p>Since we won't be able to standardize each and every component made at Scania, you'll need to develop your core UX within your project. As we’re using the Bootstrap Grid within our components, you'll highly benefit from using it in your custom development as well. Here's a few good starting points:</p>
+              <ul>
+                <li><a href="/corporate-ui-docs/corporate-ui/components/">Bootstrap Documentation</a></li>
+                <li><a href="https://www.youtube.com/playlist?list=PL7029EEFC21D2DC58" target="_blank">An introduction to Standard Bootstrap (YouTube videos)</a></li>
+              </ul>
 
-          <h3>Basic knowledge of Web Components and Google Polymer</h3>
-          <p>Using Web Components is so easy it is almost beyond imagination. Although, you will benefit from spending some time reading up on the basic ideas. Here's a few links to start out at:</p>
-          <ul>
-            <li><a href="https://meowni.ca/posts/polymer-cheatsheet/">Polymer Cheatsheet</a></li>
-            <li><a href="https://blog.revillweb.com/why-web-components-are-so-important-66ad0bd4807a#.dyerfqvci" target="_blank">Why Web Components are so important</a></li>
-            <li><a href="https://developers.google.com/web/fundamentals/getting-started/primers/customelements" target="_blank">Custom Elements v1: Reusable Web Components</a></li>
-            <li><a href="https://www.polymer-project.org/1.0/start/" target="_blank">Get started with Google Polymer</a></li>
-          </ul>
+              <h3>Basic knowledge of Web Components and Google Polymer</h3>
+              <p>Using Web Components is so easy it is almost beyond imagination. Although, you will benefit from spending some time reading up on the basic ideas. Here's a few links to start out at:</p>
+              <ul>
+                <li><a href="https://meowni.ca/posts/polymer-cheatsheet/">Polymer Cheatsheet</a></li>
+                <li><a href="https://blog.revillweb.com/why-web-components-are-so-important-66ad0bd4807a#.dyerfqvci" target="_blank">Why Web Components are so important</a></li>
+                <li><a href="https://developers.google.com/web/fundamentals/getting-started/primers/customelements" target="_blank">Custom Elements v1: Reusable Web Components</a></li>
+                <li><a href="https://www.polymer-project.org/1.0/start/" target="_blank">Get started with Google Polymer</a></li>
+              </ul>
+            </div>
+          </article>
+          <article>
+            <div class="new-version-article">
+              <div class="pull-right old-version">
+                <h5 class="pt-1"><a href="#corporate-ui-5">Corporate-ui 3.x</a></h5>
+              </div>
+              <div>
+                <h1>Corporate UI 4.x</h1>
+                <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
+                <h3>Web components</h3>
+                <p>
+                  The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
+                  Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
+                  More information about Web components can be found in the new Corporate UI 4 repository.
+                </p>
+                <p>
+                  <a href="#">Corporate Ui 4 repository</a>
+                </p>
+                <h3>Bootstrap Upgrade</h3>
+                <p>
+                  The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
+                  Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
+                  More information about Web components can be found in the new Corporate UI 4 repository.
+                </p>
+                <p>
+                  <a href="#">Read More</a>
+                </p>
+                <h3>Styling</h3>
+                <p>
+                  Another change that was made is the configuration for styling to deliver a better developer experience.
+                  The style theme has now been separated from Corporate UI in order to give developers better control of the theming.
+                  Separating the style theme from Corporate UI enables parallel updates to be made to the different repository’s.
+                  Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
+                  Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
+                  While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
+                  Check out Scania theme repository for a more detail documentation.
+                </p>
+                <p>
+                  <a href="#">Read More</a>
+                </p>
+                <h3>Distribution</h3>
+                <p>
+                    In addition to the CDN delivery, it is now possible to use Corporate UI and Scania theme as a package as it is available in NPM.
+                    This will enable projects to host assets from Corporate UI how they want without relying on an internet connection.
+                    Furthermore it will add flexibility to how they want to manipulate the package to fit their project’s needs.
+                </p>
+                <strong>CDN</strong>
+                <p>Add link to the script by adding the following to the <code>&lt;head&gt;</code>. Make sure to include scania-theme script BEFORE the corporate-ui script.</p>
+                <div>
+                  <code>&lt;script src="https://static.scania.com/build/global/themes/scania/1.x/scania-theme.js"&gt;&lt;/script&gt;</code>
+                </div>
+                <div>
+                  <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
+                </div>
+                <p>Replace x with <a href="#">available releases</a>.</p>
+                <div>
+                  <strong>NPM:</strong>
+                </div>
+                <p>
+                  <a href="#">Corporate-UI Npm package</a>
+                </p>
+              </div>
+            </div>
+          </article>
         </div>
-      </article>
+        <div class="col-lg-2 col-md-3 col-sm-3">
+          <div class="quick-links">
+            <h4>Quick links</h4>
+            <h5 class="pt-1"><a href="#">Corporate-ui 3.x</a></h5>
+            <h5 class="pt-1"><a href="#">Corporate-ui 4.x</a></h5>
+            <h5 class="pt-1"><a href="#">Scania-theme</a></h5>
+            <h5 class="pt-1"><a href="#">Scania-theme</a></h5>
+            <h5 class="pt-1"><a href="#">Scania-theme</a></h5>
+          </div>
+        </div>
+      </div>
     </section>
   </c-main-content>
 
@@ -118,6 +217,22 @@
   </c-corporate-footer>
   <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
 
+  <script>
+    var Tab = document.querySelector('.new-version a'),
+        Tab2 = document.querySelector('.old-version a');
+
+    Tab.addEventListener('click', function(){
+      console.log('click');
+      document.querySelector('.new-version-article').style.display = "block";
+      document.querySelector('.old-version-article').style.display = "none";
+    })
+
+    Tab2.addEventListener('click', function(){
+      console.log('click');
+      document.querySelector('.old-version-article').style.display = "block";
+      document.querySelector('.new-version-article').style.display = "none";
+    })
+  </script>
 </body>
 </html>
 
